@@ -10,7 +10,33 @@ static const char* FILE_NAME = "Net/SSLeay/X509_NAME.c";
 
 int32_t SPVM__Net__SSLeay__X509_NAME__foo(SPVM_ENV* env, SPVM_VALUE* stack) {
   
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  X509_NAME* x509_name = env->get_pointer(env, stack, obj_self);
+  
+  char* ret  = X509_NAME_oneline(x509_name, NULL, 0);
+  
+  if (!ret) {
+    int64_t ssl_error = ERR_peek_last_error();
+    
+    char* ssl_error_string = env->get_stack_tmp_buffer(env, stack);
+    ERR_error_string_n(ssl_error, ssl_error_string, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE);
+    
+    env->die(env, stack, "[OpenSSL Error]SSL_CTX_new failed:%s.", ssl_error_string, __func__, FILE_NAME, __LINE__);
+    
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    
+    return error_id;
+  }
+  
+  void* obj_ret = env->new_string_nolen(env, stack, ret);
+  
+  free(ret);
+  
+  stack[0].oval = obj_ret;
+  
   return 0;
 }
-
 
