@@ -3,4 +3,7 @@
 
 class Net::SSLeay::X509_NAME {
   
+  # Instance Methods
+  native method oneline : string ();
+  
 }
